--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Wed Mar 16 17:04:23 CET 2011
+#Sun May 15 22:28:45 CEST 2011
 project.organization=scan.github.com
 project.name=Nicol
-sbt.version=0.7.5
+sbt.version=0.7.7
 project.version=0.0.1
-build.scala.versions=2.9.0
+build.scala.versions=2.9.0 2.8.1
 project.initialize=false
