def.scala.version is now 2.8.1

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,9 @@
 #Project properties
-#Sun May 15 22:28:45 CEST 2011
+#Sun May 15 22:38:09 CEST 2011
 project.organization=scan.github.com
 project.name=Nicol
 sbt.version=0.7.7
 project.version=0.0.1
+def.scala.version=2.8.1
 build.scala.versions=2.9.0 2.8.1
 project.initialize=false
