--- a/project/build.properties
+++ b/project/build.properties
@@ -1,4 +1,4 @@
-project.organization=scan.github.com
+project.organization=com.github.nicol
 project.name=Nicol
 sbt.version=0.7.7
 project.version=0.0.9
