--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
-project.organization=com.github.nicol
+project.organization=com.github.scan
 project.name=Nicol
 sbt.version=0.7.7
-project.version=0.0.9
+project.version=0.1
 build.scala.versions=2.9.0 2.8.1
 project.initialize=false
