--- a/project/build.properties
+++ b/project/build.properties
@@ -2,5 +2,5 @@ project.organization=com.github.scan
 project.name=Nicol
 sbt.version=0.7.7
 project.version=0.1
-build.scala.versions=2.9.0 2.8.1 2.8.0
+build.scala.versions=2.9.0 2.8.1 
 project.initialize=false
