--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,8 @@
+#Project properties
+#Sun Jun 05 10:59:00 CEST 2011
 project.organization=com.github.scan
 project.name=Nicol
 sbt.version=0.7.7
-project.version=0.1
+project.version=0.1.1
 build.scala.versions=2.9.0 2.8.1 
 project.initialize=false
